--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-constants": "~13.0.1",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.11",
     "react": "17.0.1",
@@ -23,6 +24,7 @@
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-picker": "^4.7.3",
     "react-native-masked-view": "^0.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
